# grab-harvester

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: cli_example.py  library_example.py  simple_example.py
src/grabharvester/: __init__.py  downloader.py  interfaces.py  manager.py
tests/: test_downloader.py  test_helper.py  test_library_exposure.py  test_manager.py
