[project]
name = "grab-harvester"
version = "0.0.1"
description = "A lightweight, concurrent, and robust batch file downloader for Python. Simplifies fetching multiple files from URLs by using a thread pool, checking for existing files, and reporting failures."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
keywords = ["downloader", "batch", "concurrent", "http", "thread-pool", "automation", "file-transfer"]
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
]

[project.urls]
Repository = "https://github.com/alexcamargos/grab-harvester"
Issues = "https://github.com/alexcamargos/grab-harvester/issues"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--cov=src/grabharvester --cov-report=term-missing"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["src"], include = ["grab_harvester*"] }

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120
skip-string-normalization = true
